--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,7 @@
   "exclude": ["node_modules", "./dist/**/*"],
   "compilerOptions": {
     "typeRoots": ["@types", "./node_modules/@types"],
-    "outDir": "./dist",
+    "outDir": "./build",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
