--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
   "scripts": {
-    "dev": "tsx watch src/server/index.ts",
+    "dev": "ts-node-dev src/server/index.ts",
     "build": "npx tsc",
     "clean": "rm -rf ./build",
     "release": "release-it --ci"
